@@ -1,6 +1,6 @@
 # Factorio-Biter-Reincarnation
 
-When a Biter or Spitter dies it tries to reincarnate into the true perpetual enemy, a tree. Occasionally the very angry ones fail and burst into flames.
+When a Biter or Spitter (unit on the "enemy" force) dies it tries to reincarnate into the true perpetual enemy, a tree. Occasionally the very angry ones fail and burst into flames.
 
 The tree type (living and dead) will be biome appropriate for where the biter dies. Only base game tiles are supported, but modded trees should behave correctly. When the death is on a player placed ground type (floor) the underlying tile type is used.
 
@@ -9,3 +9,4 @@ The chance of a tree or burning tree appearing on enemy unit death is fully conf
 A script interface is included to allow other mods to utilise the logic. See the end of control.lua for the remote interface registration.
 
 Currently doesn't support modded tiles and so new landscape mods aren't supported.
+Only reacts to units on the "enemy" force to avoid unintentional reactions to other mods. If there are mods that it should react to please request them.
