@@ -1,7 +1,9 @@
 [mod-setting-name]
 turn-to-tree-chance-percent=Turn to tree chance
 burst-into-flames-chance-percent=Turn to burning tree chance
+prevent-biters-reincarnating-from-fire-death=Prevent biters reincarnating after fire death
 
 [mod-setting-description]
 turn-to-tree-chance-percent=The percent change of a biter turning in to a tree on death. Combined event chances can be greater than 100%.
 burst-into-flames-chance-percent=The percent change of a biter turning in to a burning tree on death. The fire will spread to other trees nearby. Combined event chances can be greater than 100%.
+prevent-biters-reincarnating-from-fire-death=If a biter dies from fire damage it will not reincarnate. Is to prevent possible loops with other mods.
